# realtime-ml-system

./: .gitignore  README.md  main.py  pyproject.toml
docker-compose/: redpanda.yml
kind/: kind-config.yaml
kind/manifests/: kafka-ui.yaml  kafka.yaml
services/candles/: .env.example  Makefile  config.py  pyproject.toml  run.py
services/technical-indicators/: .env.example  Makefile  candle.py  config.py  pyproject.toml  run.py  technical_indicators.py
services/trades/: .env.example  .gitignore  Dockerfile  Makefile  README.md  config.py  pyproject.toml  run.py
services/trades/kraken_api/: mock.py  trade.py  websocket.py
services/trades/src/: kraken_api.py
